// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`with \`untoggledComponent when feature is disabled should match snapshot 1`] = `
<ConfigureFlopflip
  adapter={
    Object {
      "configure": [Function],
      "getIsReady": [Function],
      "reconfigure": [Function],
    }
  }
  adapterArgs={Object {}}
  defaultFlags={Object {}}
  shouldDeferAdapterConfiguration={false}
>
  <ConfigureAdapter
    adapter={
      Object {
        "configure": [Function],
        "getIsReady": [Function],
        "reconfigure": [Function],
      }
    }
    adapterArgs={
      Object {
        "onFlagsStateChange": [Function],
        "onStatusStateChange": [Function],
      }
    }
    defaultFlags={Object {}}
    render={null}
    shouldDeferAdapterConfiguration={false}
  >
    <branchOnFeatureToggle(ToggledComponent)>
      <withProps(omitProps(branch(ToggledComponent)))
        @flopflip/flags={Object {}}
      >
        <omitProps(branch(ToggledComponent))
          @flopflip/flags={Object {}}
          isFeatureEnabled={false}
        >
          <branch(ToggledComponent)
            isFeatureEnabled={false}
          >
            <renderComponent(UntoggledComponent)
              isFeatureEnabled={false}
            >
              <UntoggledComponent
                isFeatureEnabled={false}
              >
                <div />
              </UntoggledComponent>
            </renderComponent(UntoggledComponent)>
          </branch(ToggledComponent)>
        </omitProps(branch(ToggledComponent))>
      </withProps(omitProps(branch(ToggledComponent)))>
    </branchOnFeatureToggle(ToggledComponent)>
  </ConfigureAdapter>
</ConfigureFlopflip>
`;

exports[`with \`untoggledComponent when feature is disabled when enabling feature should match snapshot 1`] = `
<ConfigureFlopflip
  adapter={
    Object {
      "configure": [Function],
      "getIsReady": [Function],
      "reconfigure": [Function],
    }
  }
  adapterArgs={Object {}}
  defaultFlags={Object {}}
  shouldDeferAdapterConfiguration={false}
>
  <ConfigureAdapter
    adapter={
      Object {
        "configure": [Function],
        "getIsReady": [Function],
        "reconfigure": [Function],
      }
    }
    adapterArgs={
      Object {
        "onFlagsStateChange": [Function],
        "onStatusStateChange": [Function],
      }
    }
    defaultFlags={Object {}}
    render={null}
    shouldDeferAdapterConfiguration={false}
  >
    <branchOnFeatureToggle(ToggledComponent)>
      <withProps(omitProps(branch(ToggledComponent)))
        @flopflip/flags={
          Object {
            "flag1": true,
          }
        }
      >
        <omitProps(branch(ToggledComponent))
          @flopflip/flags={
            Object {
              "flag1": true,
            }
          }
          isFeatureEnabled={true}
        >
          <branch(ToggledComponent)
            isFeatureEnabled={true}
          >
            <ToggledComponent
              isFeatureEnabled={true}
            >
              <div />
            </ToggledComponent>
          </branch(ToggledComponent)>
        </omitProps(branch(ToggledComponent))>
      </withProps(omitProps(branch(ToggledComponent)))>
    </branchOnFeatureToggle(ToggledComponent)>
  </ConfigureAdapter>
</ConfigureFlopflip>
`;

exports[`without \`untoggledComponent when feature is disabled should match snapshot 1`] = `
<ConfigureFlopflip
  adapter={
    Object {
      "configure": [Function],
      "getIsReady": [Function],
      "reconfigure": [Function],
    }
  }
  adapterArgs={Object {}}
  defaultFlags={Object {}}
  shouldDeferAdapterConfiguration={false}
>
  <ConfigureAdapter
    adapter={
      Object {
        "configure": [Function],
        "getIsReady": [Function],
        "reconfigure": [Function],
      }
    }
    adapterArgs={
      Object {
        "onFlagsStateChange": [Function],
        "onStatusStateChange": [Function],
      }
    }
    defaultFlags={Object {}}
    render={null}
    shouldDeferAdapterConfiguration={false}
  >
    <branchOnFeatureToggle(ToggledComponent)>
      <withProps(omitProps(branch(ToggledComponent)))
        @flopflip/flags={Object {}}
      >
        <omitProps(branch(ToggledComponent))
          @flopflip/flags={Object {}}
          isFeatureEnabled={false}
        >
          <branch(ToggledComponent)
            isFeatureEnabled={false}
          >
            <Nothing
              isFeatureEnabled={false}
            />
          </branch(ToggledComponent)>
        </omitProps(branch(ToggledComponent))>
      </withProps(omitProps(branch(ToggledComponent)))>
    </branchOnFeatureToggle(ToggledComponent)>
  </ConfigureAdapter>
</ConfigureFlopflip>
`;

exports[`without \`untoggledComponent when feature is disabled when enabling feature should match snapshot 1`] = `
<ConfigureFlopflip
  adapter={
    Object {
      "configure": [Function],
      "getIsReady": [Function],
      "reconfigure": [Function],
    }
  }
  adapterArgs={Object {}}
  defaultFlags={Object {}}
  shouldDeferAdapterConfiguration={false}
>
  <ConfigureAdapter
    adapter={
      Object {
        "configure": [Function],
        "getIsReady": [Function],
        "reconfigure": [Function],
      }
    }
    adapterArgs={
      Object {
        "onFlagsStateChange": [Function],
        "onStatusStateChange": [Function],
      }
    }
    defaultFlags={Object {}}
    render={null}
    shouldDeferAdapterConfiguration={false}
  >
    <branchOnFeatureToggle(ToggledComponent)>
      <withProps(omitProps(branch(ToggledComponent)))
        @flopflip/flags={
          Object {
            "flag1": true,
          }
        }
      >
        <omitProps(branch(ToggledComponent))
          @flopflip/flags={
            Object {
              "flag1": true,
            }
          }
          isFeatureEnabled={true}
        >
          <branch(ToggledComponent)
            isFeatureEnabled={true}
          >
            <ToggledComponent
              isFeatureEnabled={true}
            >
              <div />
            </ToggledComponent>
          </branch(ToggledComponent)>
        </omitProps(branch(ToggledComponent))>
      </withProps(omitProps(branch(ToggledComponent)))>
    </branchOnFeatureToggle(ToggledComponent)>
  </ConfigureAdapter>
</ConfigureFlopflip>
`;
